--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>React App</title>
+	<title>Heart</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-	<p>This is intial page</p>
+	<div class="heart"></div>
 </body>
 
 </html>
